// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Row/> should find cuke-row classnames 1`] = `
<div>
  <div
    class="cuke-row"
    style="margin-left:0px;margin-right:0px"
  >
    <div
      class="cuke-col cuke-col-12"
      style="padding-left:0px;padding-right:0px"
    >
      12
    </div>
    <div
      class="cuke-col cuke-col-6"
      style="padding-left:0px;padding-right:0px"
    >
      6
    </div>
    <div
      class="cuke-col cuke-col-2 cuke-col-offset-4"
      style="padding-left:0px;padding-right:0px"
    >
      2
    </div>
  </div>
</div>
`;

exports[`<Row/> should render a <Row/> components 1`] = `
<div
  class="cuke-row"
  style="margin-left:0px;margin-right:0px"
>
  <div
    class="cuke-col cuke-col-12"
    style="padding-left:0px;padding-right:0px"
  />
  <div
    class="cuke-col cuke-col-12"
    style="padding-left:0px;padding-right:0px"
  />
</div>
`;
